WebKit Bugzilla
New
Browse
Search+
Log In
×
Sign in with GitHub
or
Remember my login
Create Account
·
Forgot Password
Forgotten password account recovery
RESOLVED FIXED
302930
MediaStreamTrackProcessor does not respect track.enabled = false
https://bugs.webkit.org/show_bug.cgi?id=302930
Summary
MediaStreamTrackProcessor does not respect track.enabled = false
youenn fablet
Reported
2025-11-21 03:04:29 PST
MediaStreamTrackProcessor does not respect track.enabled = false
Attachments
Add attachment
proposed patch, testcase, etc.
Radar WebKit Bug Importer
Comment 1
2025-11-21 03:04:39 PST
<
rdar://problem/165199900
>
youenn fablet
Comment 2
2025-11-21 03:06:50 PST
Pull request:
https://github.com/WebKit/WebKit/pull/54307
youenn fablet
Comment 3
2025-11-21 03:08:37 PST
Submitted web-platform-tests pull request:
https://github.com/web-platform-tests/wpt/pull/56183
EWS
Comment 4
2025-11-21 05:25:35 PST
Committed
303389@main
(d70198894a34): <
https://commits.webkit.org/303389@main
> Reviewed commits have been landed. Closing PR #54307 and removing active labels.
Note
You need to
log in
before you can comment on or make changes to this bug.
Top of Page
Format For Printing
XML
Clone This Bug