MediaStreamTrackProcessor does not respect track.enabled = false rdar://165199900 https://bugs.webkit.org/show_bug.cgi?id=302930

Reviewed by Jean-Yves Avenard.

Add a check to track.enabled before enqueuing video frames.

* LayoutTests/imported/w3c/web-platform-tests/mediacapture-insertable-streams/MediaStreamTrackProcessor.worker-expected.txt:
* LayoutTests/imported/w3c/web-platform-tests/mediacapture-insertable-streams/MediaStreamTrackProcessor.worker.js:
(promise_test.async t):
* Source/WebCore/Modules/mediastream/MediaStreamTrackProcessor.cpp:
(WebCore::MediaStreamTrackProcessor::tryEnqueueingVideoFrame):
* Source/WebCore/Modules/mediastream/MediaStreamTrackProcessor.h:

Canonical link: https://commits.webkit.org/303389@main